tests/parser/invalid/while-do.inox
Module InvalidWhileDo

Main() :
    Var
        I := 0
    ;

    while I < 3 do
        I := I + 1
    ;
;
